Implementación de la pregunta Escalar.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/FormularioCurso/Escalar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/FormularioCurso/Escalar.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Escalar";
 }
 
-    @*<script src="~/Scripts/FormularioDelCurso.js"></script>*@
+@*<script src="~/Scripts/FormularioDelCurso.js"></script>*@
 
 <fieldset>
     @foreach (var opcion in Model)
     {
-         <br><input type="radio" name="rango" value="@opcion" id="@opcion"><label>@opcion</label>
+        @*<br><input type="radio" name="rango" value="@opcion" id="@opcion"><label>@opcion</label>*@
     }
 </fieldset>
