Cambios de direccionamiento del index para pruebas de UI

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Index.cshtml
@@ -9,7 +9,7 @@
 <h2>Banco de Preguntas</h2>
 
 <p>
-    <input type="submit" value="Crear Nueva Pregunta" class="btn btn-secondary" id="botonNuevaPregunta" onclick="location.href = 'http://localhost:51103/Item/create'" />
+    <input type="submit" value="Crear Nueva Pregunta" class="btn btn-secondary" id="botonNuevaPregunta" onclick="location.href = '@Url.Action("Create")'" />
 </p>
 
 <table class="table" id="vistaitem">
