--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -120,12 +120,12 @@
 
                                 if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.ASIGNAR_FORMULARIO))
                                 {
-                                    <li>@Html.ActionLink("Modificar o eliminar asignaciones", "Index", "Asignacion_Formulario")</li>
-                                <li>@Html.ActionLink("Asignar formulario", "Index", "AsignarFormularios")</li>
+                                    <li>@Html.ActionLink("Ver asignaciones", "Index", "Asignacion_Formulario")</li>
+                                <li>@Html.ActionLink("Asignar formularios", "Index", "AsignarFormularios")</li>
                                 }
                                 else
                                 {
-                                    <li class="disabled"><a id="link_deshabilitado">Modificar o eliminar asignaciones</a></li>
+                                    <li class="disabled"><a id="link_deshabilitado">Ver asignaciones</a></li>
                                     <li class="disabled"><a id="link_deshabilitado">Asignar formulario</a></li>
                                 }
 
