--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -48,7 +48,7 @@
                                 <div>
                                     <!--Campo de busqueda-->
                                     <br> @Html.TextBox("SearchString", "", new { placeholder = "Nombre del curso" })
-                                    <input type="submit" value="Buscar" />
+                                    <input type="submit" class="btn btn-secondary" value="Buscar grupos" />
                                 </div>
                             </p>
                         </div>
@@ -64,7 +64,7 @@
                     <div class="panel-body">
                         <div style="height:17vh; overflow:auto;">
                             @Html.TextBox("FormSearchString", "", new { placeholder = "Nombre del formulario" })
-                            <input type="submit" value="Buscar formularios" />
+                            <input type="submit" class="btn btn-secondary" value="Buscar formularios" />
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                                             Grupo
                                         </th>
                                         <th align='left'>
-                                            Profesor
+                                            Profesor(es)
                                         </th>
                                     </tr>
                                 </thead>
@@ -163,7 +163,7 @@
             </div>*@
 
         <div align='center'>
-            <input type="submit" id="boton-asignar" value="Asignar" />
+            <input type="submit" id="boton-asignar" class="btn btn-secondary" value="Asignar" />
             <button type="button" style="display:none" id="boton-abrir-modal" class="btn btn-info btn-lg" data-toggle="modal" data-target="#modalReporte">Reporte de asignaciones</button>
         </div>
 
@@ -195,7 +195,7 @@
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
                 </div>
 
-                <input type="submit" style="display:none" id="efectuar" value="ASIGNAR"/>
+                <input type="submit" class="btn btn-default" style="display:none" id="efectuar" value="ASIGNAR"/>
 
             </div>
 
