--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
@@ -22,13 +22,13 @@
 @{
     string perfil_actual = Opiniometro_WebApp.Controllers.Servicios.IdentidadManager.obtener_perfil_actual();
     var mySite = " ";
-    if(HttpContext.Current.Request.ApplicationPath.Length == 1)
+    if(HttpContext.Current.Request.ApplicationPath.Equals("/"))
     {
-        mySite = "/VisualizarFormulario/GraficoPie";
+        mySite = HttpContext.Current.Request.ApplicationPath;
     }
     else
     {
-        mySite = HttpContext.Current.Request.ApplicationPath + "/VisualizarFormulario/GraficoPie";
+        mySite = HttpContext.Current.Request.ApplicationPath + "/";
     }
     }
 
@@ -144,7 +144,7 @@
                                                         <script>
                                                         $.ajax({
                                                             type: "POST",
-                                                            url: "@mySite",
+                                                            url: "@mySite" + "VisualizarFormulario/GraficoPie",
                                                             data: "{ 'codigoFormulario': '@codigoFormularioRec', 'cedulaProfesor': '@cedulaProfesorRec', 'annoGrupo': '@annoGrupoRec', 'semestreGrupo': '@semestreGrupoRec', 'numeroGrupo': '@numeroGrupoRec', 'siglaCurso': '@siglaCursoRec', 'itemId': '@seccion.Item.ItemId', 'tipoPregunta': '@seccion.Item.TipoPregunta' }",
                                                             contentType: "application/json; charset=utf-8",
                                                             dataType: "json",
@@ -197,7 +197,14 @@
                                                                             'rgba(255, 206, 86, 0.2)',
                                                                             'rgba(75, 192, 192, 0.2)',
                                                                             'rgba(153, 102, 255, 0.2)',
-                                                                            'rgba(255, 159, 64, 0.2)'
+                                                                            'rgba(255, 159, 64, 0.2)',
+                                                                            //
+                                                                            'rgba(25, 252, 132, 0.2)',
+                                                                            'rgba(75, 159, 32, 0.2)',
+                                                                            'rgba(255, 99, 255, 0.2)',
+                                                                            'rgba(202, 70, 30, 0.2)',
+                                                                            'rgba(153, 192, 132, 0.2)',
+                                                                            'rgba(75, 102, 132, 0.2)'
                                                                         ],
                                                                         borderColor: [
                                                                             'rgba(255, 99, 132, 1)',
@@ -205,7 +212,14 @@
                                                                             'rgba(255, 206, 86, 1)',
                                                                             'rgba(75, 192, 192, 1)',
                                                                             'rgba(153, 102, 255, 1)',
-                                                                            'rgba(255, 159, 64, 1)'
+                                                                            'rgba(255, 159, 64, 1)',
+                                                                            //
+                                                                            'rgba(25, 252, 132, 1)',
+                                                                            'rgba(75, 159, 32, 1)',
+                                                                            'rgba(255, 99, 255, 1)',
+                                                                            'rgba(202, 70, 30, 1)',
+                                                                            'rgba(153, 192, 132, 1)',
+                                                                            'rgba(75, 102, 132, 1)'
                                                                         ],
                                                                         borderWidth: 1
                                                                     }]
@@ -259,7 +273,7 @@
                                                             <script>
                                                                 $.ajax({
                                                                     type: "POST",
-                                                                    url: "/VisualizarFormulario/ObtenerRespTexto",
+                                                                    url: "@mySite" + "VisualizarFormulario/ObtenerRespTexto",
                                                                     data: "{ 'codigoFormulario': '@item.CodigoFormulario', 'cedulaProfesor': '@item.Profesor.CedulaProfesor', 'annoGrupo': '@item.Grupo.AnnoGrupo', 'semestreGrupo': '@item.Grupo.SemestreGrupo', 'numeroGrupo': '@item.Grupo.Numero', 'siglaCurso': '@item.Grupo.SiglaCurso', 'itemId': '@seccion.Item.ItemId' }" ,
                                                                     contentType: "application/json; charset=utf-8",
                                                                     dataType: "json",
@@ -301,7 +315,7 @@
                                                                                 <script>
                                                                                     $.ajax({
                                                                                         type: "POST",
-                                                                                        url: "/VisualizarFormulario/ObservacionesPorPregunta",
+                                                                                        url: "@mySite" + "VisualizarFormulario/ObservacionesPorPregunta",
                                                                                         data: "{ 'codigoFormulario': '@item.CodigoFormulario', 'cedulaProfesor': '@item.Profesor.CedulaProfesor', 'annoGrupo': '@item.Grupo.AnnoGrupo', 'semestreGrupo': '@item.Grupo.SemestreGrupo', 'numeroGrupo': '@item.Grupo.Numero', 'siglaCurso': '@item.Grupo.SiglaCurso', 'itemId': '@seccion.Item.ItemId' }" ,
                                                                                         contentType: "application/json; charset=utf-8",
                                                                                         dataType: "json",
