--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Administrador/Editar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Administrador/Editar.cshtml
@@ -6,110 +6,126 @@
 
 
 <!--Login-->
+<link href="~/Content/Site.css" rel="stylesheet" />
+<script src="~/Scripts/jquery-3.3.1.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
 <div align="center">
     <h1>Opiniómetro@UCR</h1>
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
-            <h4>Editar Usuario</h4>
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-horizontal">
+        <h4>Editar Usuario</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-            @Html.HiddenFor(model => model.viejaCedula);
+        @Html.HiddenFor(model => model.viejaCedula)
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.Persona.Cedula, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-3">
-                    @Html.EditorFor(model => model.Persona.Cedula, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Persona.Cedula, "", new { @class = "text-danger" })
-                </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Persona.Cedula, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-3">
+                @Html.EditorFor(model => model.Persona.Cedula, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Persona.Cedula, "", new { @class = "text-danger" })
             </div>
+        </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.Usuario.CorreoInstitucional, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-3">
-                    @Html.EditorFor(model => model.Usuario.CorreoInstitucional, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Usuario.CorreoInstitucional, "", new { @class = "text-danger" })
-                </div>
+        <div class="form-group">
+            <!--@Html.LabelFor(model => model.Usuario.CorreoInstitucional, htmlAttributes: new { @class = "control-label col-md-2" })-->
+            <label for="model.Apellido1" class="control-label col-md-2"> Correo Institucional </label>
+            <div class="col-md-3">
+                @Html.EditorFor(model => model.Usuario.CorreoInstitucional, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Usuario.CorreoInstitucional, "", new { @class = "text-danger" })
             </div>
+        </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.Persona.Nombre1, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-3">
-                    @Html.EditorFor(model => model.Persona.Nombre1, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Persona.Nombre1, "", new { @class = "text-danger" })
-                </div>
+        <div class="form-group">
+            <!--@Html.LabelFor(model => model.Persona.Nombre1, htmlAttributes: new { @class = "control-label col-md-2" })-->
+            <label for="model.Apellido1" class="control-label col-md-2"> Primer Nombre </label>
+            <div class="col-md-3">
+                @Html.EditorFor(model => model.Persona.Nombre1, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Persona.Nombre1, "", new { @class = "text-danger" })
             </div>
+        </div>
 
-            <div class="form-group">
-                <!--@Html.LabelFor(model => model.Persona.Apellido1, htmlAttributes: new { @class = "control-label col-md-2" })-->
-                <label for="model.Apellido1" class="control-label col-md-2"> Primer Apellido </label>
-                <div class="col-md-3">
-                    @Html.EditorFor(model => model.Persona.Apellido1, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Persona.Apellido1, "", new { @class = "text-danger" })
-                </div>
+        <div class="form-group">
+            <!--@Html.LabelFor(model => model.Persona.Nombre2, htmlAttributes: new { @class = "control-label col-md-2" })-->
+            <label for="model.Apellido1" class="control-label col-md-2"> Segundo Nombre </label>
+            <div class="col-md-3">
+                @Html.EditorFor(model => model.Persona.Nombre2, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Persona.Nombre2, "", new { @class = "text-danger" })
             </div>
+        </div>
 
-            <div class="form-group">
-                <!--@Html.LabelFor(model => model.Persona.Apellido2, htmlAttributes: new { @class = "control-label col-md-2" })-->
-                <label for="model.Apellido2" class="control-label col-md-2"> Segundo Apellido </label>
-                <div class="col-md-3">
-                    @Html.EditorFor(model => model.Persona.Apellido2, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Persona.Apellido2, "", new { @class = "text-danger" })
-                </div>
+        <div class="form-group">
+            <!--@Html.LabelFor(model => model.Persona.Apellido1, htmlAttributes: new { @class = "control-label col-md-2" })-->
+            <label for="model.Apellido1" class="control-label col-md-2"> Primer Apellido </label>
+            <div class="col-md-3">
+                @Html.EditorFor(model => model.Persona.Apellido1, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Persona.Apellido1, "", new { @class = "text-danger" })
             </div>
+        </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.Usuario.Activo, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-1">
-                    @if (Model.Usuario.Activo == true)
-                    {
-                        @Html.CheckBoxFor(model => model.Usuario.Activo, new { @checked = "checked" })
-                    }
-                </div>
+        <div class="form-group">
+            <!--@Html.LabelFor(model => model.Persona.Apellido2, htmlAttributes: new { @class = "control-label col-md-2" })-->
+            <label for="model.Apellido2" class="control-label col-md-2"> Segundo Apellido </label>
+            <div class="col-md-3">
+                @Html.EditorFor(model => model.Persona.Apellido2, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Persona.Apellido2, "", new { @class = "text-danger" })
             </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Usuario.Activo, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-1">
+                @if (Model.Usuario.Activo == true)
+                {
+                    @Html.CheckBoxFor(model => model.Usuario.Activo, new { @checked = "checked" })
+                }
+            </div>
+        </div>
 
 
-            <br>
-            <div class="form-group">
-                <div class="col-md-10">
-                    <div class="col-md-2">
-                        <div style="margin-left:80px; width: 200px ">
-                            <table class="table">
-                                @{
-                                    if (Model.Perfil != null)
+        <br>
+        <div class="form-group">
+            <div class="col-md-10">
+                <div class="col-md-2">
+                    <div style="margin-left:80px; width: 200px ">
+                        <table class="table">
+                            @{
+                                if (Model.Perfil != null)
+                                {
+                                    <tr>
+                                        <th>
+                                            Perfiles
+                                        </th>
+                                        <th></th>
+                                    </tr>
+                                    for (int i = 0; i < Model.Perfil.Count; i++)
                                     {
                                         <tr>
-                                            <th>
-                                                Perfiles
-                                            </th>
-                                            <th></th>
+                                            <td>@Model.Perfil.ElementAt(i)</td>
+                                            <td>@Html.CheckBoxFor(model => Model.tienePerfil[i], new { @checked = "checked", @id = i }) <br></td>
+                                            @Html.HiddenFor(model => Model.Perfil[i])
                                         </tr>
-                                        for (int i = 0; i < Model.Perfil.Count; i++)
-                                        {
-                                            <tr>
-                                                <td>@Model.Perfil.ElementAt(i)</td>
-                                                <td>@Html.CheckBoxFor(model => Model.tienePerfil[i], new { @checked = "checked", @id = i }) <br></td>
-                                                @Html.HiddenFor(model => Model.Perfil[i])
-                                            </tr>
-                                        }
                                     }
                                 }
+                            }
 
-                            </table>
-                        </div>
-
+                        </table>
                     </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-3">
-                    <input type="submit" value="Guardar" class="btn btn-default" />
-                    @Html.ActionLink("Cancelar", "VerPersonas", "Administrador", "", new { @class = "btn btn-default" })
+
                 </div>
             </div>
         </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-3">
+                <input type="submit" value="Guardar" class="btn btn-default" />
+                @Html.ActionLink("Cancelar", "VerPersonas", "Administrador", "", new { @class = "btn btn-default" })
+            </div>
+        </div>
+    </div>
     }
 </div>
