Respuestas de los formularios se guardan (sin observaciones, ni las de tipo n6: estrella)

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/FormularioCurso/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/FormularioCurso/Index.cshtml
@@ -62,7 +62,7 @@
     <label class="datos-grupo" style="display:none;">@Model.numGrupo</label>
 
     <label class="cedEstudiante" style="display:none;">@Model.cedEst</label>
-    @*<label class="cedProfesor" style="display:none;">@Model.cedProf</label>*@
+    <label class="cedProfesor" style="display:none;">@Model.cedProf</label>
     <label class="codFormulario" style="display:none;">@Model.codFormulario</label>
 
 
